<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MachineLearningToolkitTest</string>
    <string name="choose_classifier_text">Choose classifier type:</string>

    <string name="select_classifier_tab">Select</string>
    <string name="train_classifier_tab">Train</string>
    <string name="classify_instance_tab">Classify</string>
    <string name="features_title_text">Features:</string>
    <string name="feature_add_button">Add feature</string>
    <string name="classifier_add_button">Finish</string>
    
    <string name="activity_walk">Walking</string>
    <string name="activity_sit">Sitting</string>
    <string name="activity_stand">Standing</string>    
    
    <string name="location_home">Home</string>
    <string name="location_work">Work</string>
    <string name="location_transit">Transit</string>    

    <string name="classify_activity_instance_description">This will classify the current sample of your accelerometer readings.</string>    
    <string name="classify_activity_result_before">Click on the button to get your activity class.</string>    
    <string name="classify_activity_result_sensing">Accelerometer sensing in progress&#8230;</string>
    <string name="classify_activity_result_sensed">Accelerometer sensing completed.</string>
    <string name="classify_activity_result_error">Error sensing the accelerometer or classifying the data.</string>
    <string name="classify_activity_result_classifying">Classifying&#8230;</string>
    
    <string name="classify_ballgame_instance_description">This will classify the selected features to PLAY or DON\'T PLAY ball today.</string>
    <string name="classify_ballgame_result_before">Click on the button to find out if you should play ball today.</string>    
    <string name="classify_ballgame_result_error">Error classifying the data.</string>
    <string name="classify_ballgame_result_classifying">Classifying&#8230;</string>    
    
    <string name="classify_instance_button">Classify</string>
    <string name="classify_location_instance_description">This will classify the current sample of your location readings.</string>
    <string name="classify_location_result_before">Click on the button to get your location class.</string>    
    <string name="classify_location_result_sensing">Location sensing in progress&#8230;</string>
    <string name="classify_location_result_sensed">Location sensing completed.</string>
    <string name="classify_location_result_error">Error sensing the location or classifying the data.</string>
    <string name="classify_location_result_classifying">Classifying&#8230;</string>    
    
    
    <string name="train_activity_classifier_description">This will train the classifier based on the accelerometer readings. Please select your current activity and press the button.</string>
    <string name="train_classifier_button">Train</string>
    <string name="train_activity_result_before">Click on the button to train the activity classifier.</string>    
    <string name="train_activity_result_sensing">Accelerometer sensing in progress&#8230;</string>
    <string name="train_activity_result_sensed">Accelerometer sensing completed.</string>
    <string name="train_activity_result_classifying">Classifying&#8230;</string>        
    <string name="train_activity_result_trained">Classifier trained.</string>
    <string name="train_activity_result_error">Error sensing the accelerometer or training the classifier.</string>
    <string name="train_activity_radio_error">Please select your current activity.</string>
    <string name="train_activity_radio_unknown_error">Something went wrong. This activity is not registered.</string>
    <string name="train_location_classifier_description">This will train the classifier based on the location readings. Please select an option that describes your current location and press the button.</string>
    <string name="train_location_result_before">Click on the button to train the location classifier.</string>    
    <string name="train_location_result_sensing">Location sensing in progress&#8230;</string>
    <string name="train_location_result_sensed">Location sensing completed.</string>
    <string name="train_location_result_classifying">Classifying&#8230;</string>        
    <string name="train_location_result_trained">Classifier trained.</string>
    <string name="train_location_result_error">Error sensing the location or training the classifier.</string>
    <string name="train_location_radio_error">Please select your current location.</string>
    <string name="train_location_radio_unknown_error">Something went wrong. The system cannot get your location.</string>

    <string name="train_ballgame_classifier_description">This will train the classifier based on the ID3 example. The input is hardcoded.</string>
    <string name="train_ballgame_result_before">Click on the button to train the ballgame classifier.</string>    
    <string name="train_ballgame_result_classifying">Classifying&#8230;</string>        
    <string name="train_ballgame_result_trained">Classifier trained.</string>
    <string name="train_ballgame_result_error">Error training the classifier.</string>
    
	<string name="save_classifiers">Save classifiers</string>
    <string name="load_classifiers">Load classifiers</string>
	

    <string name="select_classifier_naiveBayes">Naive bayes</string>
    <string name="select_classifier_bayesNet">Bayes net</string>
    <string name="select_classifier_activity">Activity classifier</string>
    <string name="select_classifier_location">Location classifier</string> 
    <string name="select_classifier_ballgame">Ballgame classifier</string>        
    <string name="select_classifier_button">Select this classifier</string>
    <string name="select_classifier_result_before">Select a classifier and click the button to instantiate it.</string>
    <string name="select_classifier_result_instantiated">Classifier already instantiated.</string>
    <string name="select_classifier_result_done">Instantiation done.</string>
 
    <string name="outlook">Outlook</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    
    <string-array name="outlook_array">
        <item>sunny</item>
        <item>overcast</item>
        <item>rain</item>        
    </string-array>

    <string-array name="temp_array">
        <item>hot</item>
        <item>mild</item>
        <item>cool</item>        
    </string-array>
    
    <string-array name="humidity_array">
        <item>high</item>
        <item>normal</item>
    </string-array>
    
    <string-array name="wind_array">
        <item>weak</item>
        <item>strong</item>
    </string-array>    
    
    <string-array name="classifiers_list">
        <item>Naive Bayes</item>
        <item>Bayes net</item>
        <item>Ada Boost</item>
        <item>Hoeffding Tree</item>        
    </string-array>
    
</resources>