<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/select_classifier_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/select_classifier_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/select_classifier_activity"/>

        <RadioButton
            android:id="@+id/select_classifier_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_classifier_location" />

		<RadioButton
            android:id="@+id/select_classifier_ballgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_classifier_ballgame" />

	</RadioGroup>

    <Button
        android:id="@+id/select_classifier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selectClassifier"
        android:text="@string/select_classifier_button" />
    
    <TextView
        android:id="@+id/select_classifier_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_classifier_result_before" 
        android:padding="8dp"/>

</LinearLayout>